<resources>
    <string name="app_name">MyFatApp</string>
    <string name="main_txt_welcome">Welcome!</string>
    <string name="main_txt_time">Time placeholder</string>
    <string name="main_b_main">Heya!</string>
    <string name="main_b_reTime">Reset Time</string>
    <string name="main_b_linkify">Linkify text!</string>
    <string name="main_txt_changeMe">Tap a button and i might change!</string>
    <string name="main_b_webAct">Webview!</string>
    <string name="main_b_intents">Intents!</string>
    <string name="web_txt_url">Type a url here...</string>
    <string name="web_b_urlOk">Go</string>
    <string name="web_txt_urlDefault">https://javabog.dk/</string>
    <string name="int_txt_messageHint">Type some message here!</string>
    <string name="int_txt_numberHint">11223344</string>
    <string name="int_txt_emailHint">example@somemail.wtf</string>
    <string name="int_b_callNum">Call number</string>
    <string name="int_b_sendSMS">Send SMS</string>
    <string name="int_b_sendEmail">Send E-mail</string>
    <string name="int_b_shareApp">Share this app</string>
    <string name="int_b_settings">Settings</string>
    <string name="int_b_webIntent">Open Website (About Intents)</string>
    <string name="int_txt_textLinkified">Linkify text placeholder</string>
</resources>
